# SpendBoundary

./: .gitignore  README.md  pyproject.toml
SpendBoundary/: __init__.py  __main__.py  cli.py  engine.py  report.py
tests/: test_spend_boundary.py
